# EcoGuard

./: .gitignore  README.md  docker-compose.yaml  generate_certs.sh.example  run_chaos.sh
ecoguard-agent/: Cargo.toml
ecoguard-agent/src/: fft_processor.rs  main.rs  mqtt_publisher.rs  physics.rs
ecoguard-dashboard/: index.html  package-lock.json  package.json
ecoguard-dashboard/mobile/: App.js  README.md  package.json
ecoguard-dashboard/src/: App.jsx
mosquito/: config
mosquito/config/: acl.conf  mosquito.conf
telegraf/: telegraf.conf
