[package]
name = "ecoguard-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime & Networking
tokio = { version = "1.35", features = ["full"] } # Required to prevent physics from blocking network 
rumqttc = { version = "0.24", features = ["url"] } # Pure Rust MQTT client for MQTT 5.0 and mTLS [cite: 114, 218]

# Mathematics & Edge Processing
rustfft = "6.2" # For converting time-domain waves to frequency-domain on the edge 
rand = "0.8"
rand_distr = "0.4" # To inject Gaussian noise simulating real mechanical friction [cite: 174]
num-complex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # To format our payload as JSON before publishing